--- a/Roullete-front/src/app/user-login/user-login.component.html
+++ b/Roullete-front/src/app/user-login/user-login.component.html
@@ -1,17 +1,20 @@
-<nav class="navbar navbar-light bg-light" style="background-color: #e3f2fd";>
+<nav class="navbar navbar-light bg-light" style="background-color: #e3f2fd">
   <span class="navbar-brand mb-0 h1">Roulette</span>
 </nav>
+
 <div class="container">
   <div class="col-md-6 mx-auto" style="margin-top: 20vh">
-    <div class="card text-center ">
+    <p class="error">{{errorMsg}}</p>
+    <div class="card text-center">
       <h4 class="card-header">Login</h4>
-      <div class="card-body"><label class="invalid">invalid</label>
-        <br>
+      <div class="card-body">
         <h4 class="card-title">Enter Your Unique ID</h4>
+        <form #form="ngForm" (submit)="submitForm(form)">
         <p class="card-text">
-          <input type="text" class="form-control"/>
+          <input type="text" class="form-control" name="uuid" [(ngModel)]="uuid"/>
         </p>
-        <a href="#" class="btn btn-primary">Login</a>
+        <button class="btn btn-primary" type="submit">Login</button>
+        </form>
       </div>
     </div>
   </div>
